# directa-conecta-back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
apps/api/: authentication.py  serializers.py  urls.py  utils.py  views.py
apps/centros/: admin.py  models.py
apps/centros/migrations/: 0001_initial.py  0002_edificio.py
apps/personas/: admin.py  choices.py  models.py
apps/personas/management/commands/: exportar_knowledge_source.py
apps/personas/migrations/: 0001_initial.py  0002_remove_personareportada_canal_reportante_and_more.py  0003_alter_personareportada_fecha_ultimo_contacto_and_more.py  0004_remove_personareportada_detalle_fuente_and_more.py  0005_alter_actualizacionestado_estado_anterior_and_more.py
apps/usuarios/: admin.py  apps.py  models.py
apps/usuarios/migrations/: 0001_initial.py  0002_delete_perfilhospital.py
config/: urls.py
config/settings/: base.py  development.py  production.py
scripts/: commands.py
templates/admin/: import_excel.html
templates/admin/personas/personareportada/: change_list.html
