[tool.poetry]
name = "directa-conecta"
version = "1.0.0"
description = "Sistema de gestión de personas reportadas — Emergencia Sísmica Venezuela 2026"
authors = ["Directa Group"]
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.6"
psycopg2-binary = ">=2.9.10"
python-decouple = "3.8"
gunicorn = "22.0.0"
openpyxl = "3.1.2"
djangorestframework = "3.15.2"
drf-spectacular = "0.27.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0"

[tool.poetry.scripts]
dev   = "scripts.commands:dev"
start = "scripts.commands:start"

[tool.black]
line-length = 100
exclude = '''
/(
    migrations
  | \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
